fixed pictures being too big

--- a/Movie Guesser/style.css
+++ b/Movie Guesser/style.css
@@ -33,3 +33,11 @@ body {
 
 }
 
+#img {
+
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 500px;
+    height: 300px;
+}
